--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <p>UC Berkeley EECS Undergrad<br/> <a href="#about-me">Read more about me</a></p>
              <div class="title-links">
               <div class="container">
-                <p><button type="button" class="btn btn-success btn-lg"><a href="#about-me">Read more about me</a></button>
-                <button type="button" class="btn btn-success btn-lg"><a href="#resume">Check out my Résumé</a></button>
-                <button type="button" class="btn btn-success btn-lg"><a href="#contact-me">See how to contact me</a></button></p>
+               <p>
+                <a href="#about-me"><button type="button" class="btn btn-success btn-lg">Read more about me</button></a>
+                <a href="#resume"><button type="button" class="btn btn-success btn-lg">Check out my Résumé</button></a>
+                <a href="#contact-me"><button type="button" class="btn btn-success btn-lg">See how to contact me</button></a>
+               </p>
               </div>
             </div>
           </div>
