--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Vincent Escueta</h1>
-            <p>UC Berkeley EECS Undergrad<br/><br/>
+            <p>UC Berkeley EECS Undergrad<br/>
                 <a href="#about-me"><button type="button" class="btn btn-success btn-lg">Read more about me</button></a>
                 <a href="#resume"><button type="button" class="btn btn-success btn-lg">Check out my Résumé</button></a>
-                <a href="#contact-me"><button type="button" class="btn btn-success btn-lg">See how to contact me</button></a>
+                <a href="#contact-me"><button type="button" class="btn btn-success btn-lg">Any Questions? Contact me</button></a>
             </p>
           </div>
         </div>
