--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>UC Berkeley EECS Undergrad<br/>
                 <a href="#about-me"><button type="button" class="btn btn-success btn-lg">Read more about me</button></a>
                 <a href="#resume"><button type="button" class="btn btn-success btn-lg">Check out my Résumé</button></a>
-                <a href="#contact-me"><button type="button" class="btn btn-success btn-lg">Any Questions? Contact me</button></a>
+                <a href="#contact-me"><button type="button" class="btn btn-success btn-lg">Go ahead and contact me</button></a>
             </p>
           </div>
         </div>
