--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
           <ul class="navbar-nav">
-            <li class="nav-item"><a href="#home">Home</a></li>
+            <li class="nav-item active"><a href="#home">Home</a></li>
             <li class="nav-item"><a href="#about-me">About Me</a></li>
             <li class="nav-item"><a href="#resume">Résumé</a></li>
             <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
