--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
     <header class="title text-center">
       <div class="title-body" id="home">
         <div class="container">
-          <div class="col-md-8 col-md-offset-2">
+          <div class="about-me-picture text-right">
+            <div class="col-md-5">
+              <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+            </div>
+          </div>
+          <div class="col-md-6">
             <h1>Vincent Escueta</h1>
             <p>UC Berkeley EECS Undergrad<br/>
                 <a href="#about-me"><button type="button" class="btn btn-success btn-lg">Read more about me</button></a>
