--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="title text-center">
       <div class="title-body" id="home">
         <div class="container">
-          <div class="about-me-picture text-right">
+          <div class="title-picture text-right">
             <div class="col-md-5">
               <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
             </div>
