changing the design of the website

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           <div class="col-md-6">
             <h1>Vincent Escueta</h1>
             <p>UC Berkeley EECS Undergrad<br/>
-                <a href="#about-me"><button type="button" class="btn btn-success btn-lg">Read more about me</button></a>
+<!--                 <a href="#about-me"><button type="button" class="btn btn-success btn-lg">Read more about me</button></a>
                 <a href="#resume"><button type="button" class="btn btn-success btn-lg">Check out my Résumé</button></a>
                 <a href="#contact-me"><button type="button" class="btn btn-success btn-lg">Go ahead and contact me</button></a>
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
@@ -46,11 +46,11 @@
       <div class "about-me-body" id="about-me">
        <div class="container">
         <div class="row">
-          <div class="about-me-picture text-right">
+<!--           <div class="about-me-picture text-right">
               <div class="col-md-5">
                 <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
               </div>
-          </div>
+          </div> -->
           <div class="about-me-body text-center">
               <div class="col-md-6">
                 <h1>About Me</h1>
