navbar helper is cool

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
   </head>
-  <body>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">>
     <div class="nav navbar navbar-custom navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header"> 
