--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="nav-item active"><a href="#home">Home</a></li>
-          <li class="nav-item"><a href="#about-me">About Me</a></li>
-          <li class="nav-item"><a href="#resume">Résumé</a></li>
-          <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#resume">Résumé</a></li>
+          <li><a href="#contact-me">Contact Me</a></li>
         </ul>
       </div>
     </div>
