--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">VINCENT ESCUETA</a>
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
@@ -48,7 +48,7 @@
       </div>
     </div> -->
     <header class="title text-center">
-      <div class="title-body" id="home">
+      <div class="title-body container-fluid" id="home">
         <div class="container">
           <div class="title-picture text-right">
             <div class="col-md-5">
@@ -67,7 +67,7 @@
       </div>
     </header>
     <header class="about-me">
-      <div class="about-me-body" id="about-me">
+      <div class="about-me-body container-fluid" id="about-me">
        <div class="container">
         <div class="row">
 <!--           <div class="about-me-picture text-right">
@@ -85,7 +85,7 @@
       </div>
     </header>
     <header class="resume text-center">
-      <div class="resume-body" id="resume">
+      <div class="resume-body container-fluid" id="resume">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>My Résumé</h1>
@@ -95,7 +95,7 @@
       </div>
     </header>
     <header class="contact-me text-center">
-      <div class="contact-me-body" id="contact-me">
+      <div class="contact-me-body container-fluid" id="contact-me">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Contact Me</h1>
