--- a/index.html
+++ b/index.html
@@ -15,21 +15,51 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">VINCENT ESCUETA</a>
+      <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about-me">About Me</a></li>
-          <li><a href="#resume">Résumé</a></li>
-          <li><a href="#contact-me">Contact Me</a></li>
+          <li><a href="#section1">Section 1</a></li>
+          <li><a href="#section2">Section 2</a></li>
+          <li><a href="#section3">Section 3</a></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#section41">Section 4-1</a></li>
+              <li><a href="#section42">Section 4-2</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
   </div>
 </nav>    
 
+<div id="section1" class="container-fluid">
+  <h1>Section 1</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
+<div id="section2" class="container-fluid">
+  <h1>Section 2</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
+<div id="section3" class="container-fluid">
+  <h1>Section 3</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
+<div id="section41" class="container-fluid">
+  <h1>Section 4 Submenu 1</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
+<div id="section42" class="container-fluid">
+  <h1>Section 4 Submenu 2</h1>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+</div>
 
  <!--  <body data-spy="scroll" data-target=".navbar" data-offset="50">>
     <div class="nav navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -48,7 +78,7 @@
       </div>
     </div> -->
     <header class="title text-center">
-      <div class="title-body container-fluid" id="home">
+      <div class="title-body" id="home">
         <div class="container">
           <div class="title-picture text-right">
             <div class="col-md-5">
@@ -67,7 +97,7 @@
       </div>
     </header>
     <header class="about-me">
-      <div class="about-me-body container-fluid" id="about-me">
+      <div class="about-me-body" id="about-me">
        <div class="container">
         <div class="row">
 <!--           <div class="about-me-picture text-right">
@@ -85,7 +115,7 @@
       </div>
     </header>
     <header class="resume text-center">
-      <div class="resume-body container-fluid" id="resume">
+      <div class="resume-body" id="resume">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>My Résumé</h1>
@@ -95,7 +125,7 @@
       </div>
     </header>
     <header class="contact-me text-center">
-      <div class="contact-me-body container-fluid" id="contact-me">
+      <div class="contact-me-body" id="contact-me">
         <div class="container">
           <div class="col-md-8 col-md-offset-2">
             <h1>Contact Me</h1>
