--- a/index.html
+++ b/index.html
@@ -1,78 +1,144 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <style>
-  body {
-      position: relative; 
-  }
-  #section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
-  #section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
-  #section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
-  #section41 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
-  #section42 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
-  </style>
-</head>
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
-          <li><a href="#section1">Section 1</a></li>
-          <li><a href="#section2">Section 2</a></li>
-          <li><a href="#section3">Section 3</a></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a href="#section41">Section 4-1</a></li>
-              <li><a href="#section42">Section 4-2</a></li>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8">
+    <title>Vincent Escueta by vincent-escueta22</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
+  </head>
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+          </button>
+          <a class="navbar-brand" href="#">VINCENT ESCUETA</a>
+        </div>
+        <div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#resume">Résumé</a></li>
+              <li><a href="#contact-me">Contact Me</a></li>
             </ul>
-          </li>
+          </div>
+        </div>
+      </div>
+    </nav>    
+
+
+ <!--  <body data-spy="scroll" data-target=".navbar" data-offset="50">>
+    <div class="nav navbar navbar-custom navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header"> 
+          <p>Vincent Escueta</p>
+        </div>
+        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+          <ul class="navbar-nav">
+            <li class="nav-item active"><a href="#home">Home</a></li>
+            <li class="nav-item"><a href="#about-me">About Me</a></li>
+            <li class="nav-item"><a href="#resume">Résumé</a></li>
+            <li class="nav-item"><a href="#contact-me">Contact Me</a></li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
+    <header class="title text-center">
+      <div class="title-body container-fluid" id="home">
+        <div class="container">
+          <div class="title-picture text-right">
+            <div class="col-md-5">
+              <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+            </div>
+          </div>
+          <div class="col-md-6">
+            <h1>Vincent Escueta</h1>
+            <p>UC Berkeley EECS Undergrad<br/>
+<!--                 <a href="#about-me"><button type="button" class="btn btn-success btn-lg">Read more about me</button></a>
+                <a href="#resume"><button type="button" class="btn btn-success btn-lg">Check out my Résumé</button></a>
+                <a href="#contact-me"><button type="button" class="btn btn-success btn-lg">Go ahead and contact me</button></a>
+            </p> -->
+          </div>
+        </div>
+      </div>
+    </header>
+    <header class="about-me">
+      <div class="about-me-body container-fluid" id="about-me">
+       <div class="container">
+        <div class="row">
+<!--           <div class="about-me-picture text-right">
+              <div class="col-md-5">
+                <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+              </div>
+          </div> -->
+          <div class="about-me-text text-center">
+              <div class="col-md-8 col-md-offset-2">
+                <p>Hi! I am Vincent Escueta from Diamond Bar, California and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science to focus on computer graphics and animation. All my technical skills are in my résumé in the section below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, and going on spontaneous adventures.</p>
+            </div>
+          </div>
+        </div>
+       </div>
+      </div>
+    </header>
+    <header class="resume text-center">
+      <div class="resume-body container-fluid" id="resume">
+        <div class="container">
+          <div class="col-md-8 col-md-offset-2">
+            <h1>My Résumé</h1>
+              <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span> Download</button></a></p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <header class="contact-me text-center">
+      <div class="contact-me-body container-fluid" id="contact-me">
+        <div class="container">
+          <div class="col-md-8 col-md-offset-2">
+            <h1>Contact Me</h1>
+            <p>
+              <button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+              <button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- <section id="about-me" class="container content-section text-center">
+     <div class="about-me">
+      <h1>About Me</h1>
+      <p>Hi! I am Vincent Escueta and I currently am a sophomore at the University of California, Berkeley as an electrical engineering and computer science major. I'm hoping to use my knowledge in computer science and focus on computer graphics and animation. All my technical skills are in my resume below, but some of my hobbies are playing Starcraft, playing basketball, watching movies, Photoshopping pictures, bowling, cooking, baking, drawing, growing in my Christian faith, and going on spontaneous adventures.</p>
+      </div>
+    </section>
+    <section id="resume" class="container content-section text-center">
+      <div class="resume">
+        <h1>My Résumé</h1>
+        <p><a href="Vincent_Escueta_resume.pdf"><button type="button" class="btn btn-secondary btn-lg"><span class="glyphicon glyphicon-download"aria-hidden="true"></span>Download</button></a></p>
+      </div>
+    </section>
+    <section id="contact-me" class="container content-section text-center">
+      <div class="contact-me">
+        <h1>Contact Me</h1>
+          <p><button type="button" class="btn btn-link btn-xs"><a href="vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+          <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+          <button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
+          <button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;"></a></button>
         </ul>
       </div>
-    </div>
-  </div>
-</nav>    
-
-<div id="section1" class="container-fluid">
-  <h1>Section 1</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="section2" class="container-fluid">
-  <h1>Section 2</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="section3" class="container-fluid">
-  <h1>Section 3</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="section41" class="container-fluid">
-  <h1>Section 4 Submenu 1</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-<div id="section42" class="container-fluid">
-  <h1>Section 4 Submenu 2</h1>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-</div>
-
-</body>
+    </section>
+    <section id="contact-me" class="container content-section text-center">
+      <p>Last Edited: January 18, 2016</p>
+    </section> -->
+<!-- <img src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true" width="319.33" height="379.33"> </p> -->
+  </body>
 </html>
+
+<!-- #f0eceb gray
+#729f98 blue
+#283018 green
+#aa863a brown-->
