--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about-me">About Me</a></li>
               <li><a href="#projects">Projects</a></li>
               <li><a href="#resume">Résumé</a></li>
               <li><a href="#contact-me">Contact Me</a></li>
