--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <title>Vincent Escueta by vincent-escueta22</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="startbootstrap-creative-1.0.2/css/bootstrap.min.css">
+<!--     <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="main.css">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
