navbar helper is cool

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
               <li><a href="#about-me">About Me</a></li>
               <li><a href="#projects">Projects</a></li>
               <li><a href="#resume">Résumé</a></li>
