--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Vincent Escueta by vincent-escueta22</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="startbootstrap-creative-1.0.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="startbootstrap-creative-1.0.2/css/animate.min.css">
 <!--     <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="main.css">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -22,10 +23,11 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#about-me">About Me</a></li>
-              <li><a href="#projects">Projects</a></li>
-              <li><a href="#resume">Résumé</a></li>
-              <li><a href="#contact-me">Contact Me</a></li>
+              <li class="hidden"><a href="#page-top"></a></li>
+              <li class="page-scroll"><a href="#about-me">About Me</a></li>
+              <li class="page-scroll"><a href="#projects">Projects</a></li>
+              <li class="page-scroll"><a href="#resume">Résumé</a></li>
+              <li class="page-scroll"><a href="#contact-me">Contact Me</a></li>
             </ul>
           </div>
         </div>
