navbar helper is cool

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
        </div>
       </div>
     </header>
+    <header class="projects text-center">
+      <div class="projects-body container-fluid" id="projects">
+        <div class="container">
+          <div class="col-md-8 col-md-offset-2">
+            <h1>Projects</h1>
+              <p>SOON TO BE FILLED</p>
+          </div>
+        </div>
+      </div>
+    </header>
     <header class="resume text-center">
       <div class="resume-body container-fluid" id="resume">
         <div class="container">
