navbar helper is cool

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Vincent Escueta by vincent-escueta22</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="startbootstrap-creative-1.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="startbootstrap-creative-1.0.2/css/animate.min.css">
-<!--     <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="main.css">
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
