editting the theme

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <div class="header-content-inner">
                 <h1>Vincent Escueta</h1>
                 <hr>
-                <p>UC Berkeley EECS Undergrad</p>
+                <p><img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true"></p>
+                <p>EECS Undergrad at the University of California, Berkeley</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
             </div>
         </div>
