editting the theme

--- a/index.html
+++ b/index.html
@@ -76,8 +76,12 @@
             <div class="header-content-inner">
                 <h1>Vincent Escueta</h1>
                 <hr>
-                <p><img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true"></p>
-                <p>EECS Undergrad at the University of California, Berkeley</p>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <img class="img-circle" src="https://github.com/vincent-escueta22/Website/blob/gh-pages/linkedinphoto.jpg?raw=true">
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <p>EECS Undergrad at the University of California, Berkeley</p>
+                </div>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Learn About Me</a>
             </div>
         </div>
