--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="main.css">
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
@@ -239,7 +240,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Download my Résumé</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <a href="Vincent_Escueta_resume.pdf" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
     </aside>
