--- a/index.html
+++ b/index.html
@@ -116,13 +116,6 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Calm, Cooperative, and Charasmatic/h3>
-                        <p class="text-muted">Capable of working with others or being a leader</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Respectful, Reliable and Responsible</h3>
                         <p class="text-muted">Remember to consider the needs of others while taking care of myself</p>
@@ -130,8 +123,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
+                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <h3>Calm, Cooperative, and Charasmatic</h3>
+                        <p class="text-muted">Capable of working with others or being a leader</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Thankful/h3>
+                        <h3>Thankful</h3>
                         <p class="text-muted">Thrilled and grateful that you would take the time to checkout my website</p>
                     </div>
                 </div>
