--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
+                        <a class="page-scroll" href="#resume">Résumé</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -236,7 +236,7 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
+    <aside class="bg-dark" id="resume">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Download my Résumé</h2>
