--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
         </div>
     </section>
 
-    <aside class="bg-dark" id="resume">
+    <section class="bg-dark" id="resume">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Download my Résumé</h2>
                 <a href="Vincent_Escueta_resume.pdf" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
-    </aside>
+    </section>
 
     <section id="contact">
         <div class="container">
