--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Download my Résumé</h2>
+                <hr class="primary">
                 <a href="Vincent_Escueta_resume.pdf" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
