--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
         </div>
     </section>
 
-    <section id="services">
+    <section id="projects">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Character Traits</h2>
+                    <h2 class="section-heading">Projects</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -110,21 +110,21 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Devoted and Determined</h3>
-                        <p class="text-muted">Dedicated to finish work given to me.</p>
+                        <h3>Computer Graphics</h3>
+                        <p class="text-muted"></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Respectful, Reliable and Responsible</h3>
+                        <h3>Animation</h3>
                         <p class="text-muted">Remember to consider the needs of others while taking care of myself.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Calm, Cooperative, and Charasmatic</h3>
+                        <h3>Data Structures</h3>
                         <p class="text-muted">Capable of working with others and being a leader.</p>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="cs184_proj_2/index.html" class="portfolio-box">
-                        <img src="cs184_proj_2/images/part6_phong.png" class="img-responsive" alt="" style="width:650px; height:350px">
+                        <img src="img/part6_phong.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -174,7 +174,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="cs184_proj_1/index.html" class="portfolio-box">
-                        <img src="cs184_proj_1/images/part8_competition.png" class="img-responsive" alt="" style="width:650px; height:350px">
+                        <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -188,15 +188,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <a href="https://www.youtube.com/watch?v=UUCIodYeeBQ" class="portfolio-box">
+                        <img src="img/A_Tail_Tale2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Animation
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A Tail Tale (WARNING: Links to a video)
                                 </div>
                             </div>
                         </div>
