--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Animation</h3>
-                        <p class="text-muted">Modeling, Shading, Texturing, Lighting, Rigging, ,Animating</p>
+                        <p class="text-muted">Modeling, Shading, Texturing, Lighting, Rigging, Animating</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Data Structures</h3>
-                        <p class="text-muted">STUF STUF STUF STUF</p>
+                        <h3>Data Structures and Computer Architecture</h3>
+                        <p class="text-muted">Asymptotics, Algotithms Hashing, Heaps, Sorting, Trees, Bounds, Graphs</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>something ele</h3>
-                        <p class="text-muted">other stuff other stuff other stuff</p>
+                        <h3>Computer Architecture</h3>
+                        <p class="text-muted">Performance Optimizing, Parallelism, Caches, CPU Design</p>
                     </div>
                 </div>
             </div>
