--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
     </section>
 
-    <section id="projects">
+    <section id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
