--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                     Data Structure
                                 </div>
                                 <div class="project-name">
-                                    Gitlet: A basic version of git using data structures such as Hash Maps, Hash Sets, Linked Lists, and serialized files (link goes to project specifications)
+                                    Gitlet</br> A basic version of git using data structures such as Hash Maps, Hash Sets, Linked Lists, and serialized files (link goes to project specifications)
                                 </div>
                             </div>
                         </div>
