--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
+                    <a href="http://cs184.eecs.berkeley.edu/cs184_sp16/article/10" class="portfolio-box">
                         <img src="img/spheres.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -151,7 +151,7 @@
                                     Computer Graphics
                                 </div>
                                 <div class="project-name">
-                                    PathTracer(NOT YET POSTED BUT WILL BE UPDATED SOON)
+                                    PathTracer(NOT YET POSTED BUT WILL BE UPDATED SOON, CURRENTLY LINKS TO THE PROJECT SPECS)
                                 </div>
                             </div>
                         </div>
