--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://cs184.eecs.berkeley.edu/cs184_sp16/article/10" class="portfolio-box">
+                    <a href="http://cs184.eecs.berkeley.edu/cs184_sp16/article/10" class="portfolio-box portfolio-link">
                         <img src="img/spheres.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -158,7 +158,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="cs184_proj_2/index.html" target="_blank" class="portfolio-box">
+                    <a href="cs184_proj_2/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/part6_phong.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -173,7 +173,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="cs184_proj_1/index.html" target="_blank" class="portfolio-box">
+                    <a href="cs184_proj_1/index.html" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/part8_competition.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -188,7 +188,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://www.youtube.com/watch?v=UUCIodYeeBQ" target="_blank" class="portfolio-box">
+                    <a href="https://www.youtube.com/watch?v=UUCIodYeeBQ" target="_blank" class="portfolio-box portfolio-link">
                         <img src="img/A_Tail_Tale2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -203,7 +203,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" class="portfolio-box">
+                    <a href="http://cs61b.ug/sp15/materials/proj/proj2/proj2.html" class="portfolio-box portfolio-link">
                         <img src="img/gitlet.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -218,7 +218,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" class="portfolio-box">
+                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" class="portfolio-box portfolio-link">
                         <img src="img/cpu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
