--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                        <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary"></i>
                         <h3>Computer Graphics</h3>
                         <p class="text-muted">Rasterization, Geometry, Global Illumination, Light Tracing </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <i class="fa fa-4x fa-film wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Animation</h3>
                         <p class="text-muted">Modeling, Shading, Texturing, Lighting, Rigging, Animating</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                        <i class="fa fa-4x fa-save wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Data Structures</h3>
                         <p class="text-muted">Asymptotics, Algotithms Hashing, Heaps, Sorting, Trees, Bounds, Graphs</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                        <i class="fa fa-4x  fa-desktop wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Computer Architecture</h3>
                         <p class="text-muted">Performance Optimizing, Parallelism, Caches, CPU Design</p>
                     </div>
@@ -241,7 +241,7 @@
             <div class="call-to-action">
                 <h2>Download my Résumé</h2>
                 <hr class="primary">
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-4x fa-save fa-download wow bounceIn text-primary" data-wow-delay=".1s"></i>Download Now!</a>
             </div>
         </div>
     </section>
@@ -253,12 +253,21 @@
                     <h2 class="section-heading">Contact Me!</h2>
                     <hr class="primary">
                     <p>If you want to contact me, you can email me or you can send me a message on LinkedIn. You can also find my GitHub and Facebook as well.</p>
-                    <p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
+                    <p>123-456-6789</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                </div>
+<!--                     <p>
                       <button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
                       <button type="button" class="btn btn-link btn-xs"><a href="https://www.linkedin.com/in/vincent-escueta-66b362a5?trk=nav_responsive_tab_profile_pic"><img src="linkedin.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
                       <button type="button" class="btn btn-link btn-xs"><a href="https://github.com/vincent-escueta22"><img src="GitHub.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
                       <button type="button" class="btn btn-link btn-xs"><a href="https://www.facebook.com/vincent.escueta22"><img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
-                    </p>
+                    </p> -->
             </div>
         </div>
     </section>
