--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-github-alt fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="https://github.com/vincent-escueta22">GitHub target="_blank"</a></p>
+                    <p><a href="https://github.com/vincent-escueta22" target="_blank">GitHub"</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="https://www.facebook.com/vincent.escueta22">Facebook target="_blank"</a></p>
+                    <p><a href="https://www.facebook.com/vincent.escueta22" target="_blank">Facebook"</a></p>
                 </div>
 <!--                     <p>
                       <button type="button" class="btn btn-link btn-xs"><a href="mailto:vincent.escueta22@berkeley.edu"><img src="email.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;" target="_blank"></a></button>
