--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="call-to-action">
                 <h2>Download my Résumé</h2>
                 <hr class="primary">
-                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary" data-wow-delay=".1s"></i> Download Now!</a>
+                <a href="Vincent_Escueta_resume.pdf" target="_blank" class="btn btn-default btn-xl wow tada"><i class="fa fa-lg fa-save fa-download wow bounceIn text-primary"></i> Download Now!</a>
             </div>
         </div>
     </section>
