--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Data Structure
+                                    Data Structures
                                 </div>
                                 <div class="project-name">
                                     Gitlet</br> A basic version of git using data structures such as Hash Maps, Hash Sets, Linked Lists, and serialized files. (link goes to project specifications)
