added generous ghost

--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://www.youtube.com/watch?v=UUCIodYeeBQ" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/A_Tail_Tale2.jpg" class="img-responsive" alt="">
+                    <a href="https://www.youtube.com/watch?v=etZ4_-EFQbs" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/The_Generous_Ghost.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Animation
                                 </div>
                                 <div class="project-name">
-                                    A Tail Tale (Warning: Links to a video)
+                                    The Generous Ghost (Warning: Links to a video)
                                 </div>
                             </div>
                         </div>
