update for fall 2016

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-camera-retro wow bounceIn text-primary"></i>
                         <h3>Computer Graphics</h3>
-                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Light Tracing </p>
+                        <p class="text-muted">Rasterization, Geometry, Global Illumination, Camera Simulation, and 3D Animation</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -132,7 +132,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x  fa-desktop wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Computer Architecture</h3>
-                        <p class="text-muted">Performance Optimizing, Parallelism, Caches, CPU Design</p>
+                        <p class="text-muted">Abstraction, Moore's Law, Principle of Locality, Parallelism, Dependability via Redundancy</p>
                     </div>
                 </div>
             </div>
@@ -247,36 +247,51 @@
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
-                    <a href="#" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://inst.eecs.berkeley.edu/~cs61c/fa15/projs/03_2/" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/cpu.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Animation
+                                    Computer Architecture
                                 </div>
                                 <div class="project-name">
-                                    Generous Ghost (FUTURE ANIMATION) not out yet links to top of page
+                                    CPU, ALU, and Regfile</br> Designed a CPU(central processing unit) on Logism by first designing the ALU(arithmetic logic unit), register file, memory, and pipelining the CPU. (link goes to project specifications)
                                 </div>
                             </div>
                         </div>
                     </a>
-                </div> -->
-                <!-- <div class="col-lg-4 col-sm-6">
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="#" target="_blank" class="portfolio-box portfolio-link">
-                        <img src="img/dragon_lens2.jpg" class="img-responsive" alt="">
+                        <img src="img/scheme.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Computer Graphics
+                                    SOMETHING
                                 </div>
                                 <div class="project-name">
-                                    Research project (FUTURE project) not out yet, linkts to top of page
+                                    Scheme Interpreter </br> Developed a Scheme Interpreter in Python that demonstrates our understanding of both Object-Oriented Programming and Functional Programming while utilizing the basics of programming such as recursion,  lists, lambda functions, and inheritance. (link goes to project specifications)
                                 </div>
                             </div>
                         </div>
                     </a>
-                </div> -->
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="#" target="_blank" class="portfolio-box portfolio-link">
+                        <img src="img/Mips.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Computer Architecture
+                                </div>
+                                <div class="project-name">
+                                    MIPS Assembler</br> Assembler that takes in MIPS instructions and turns those instructions into machine code. Afterword, a MIPS Linker from a later project takes object code files and outputs executable files. (link goes to project specifications)
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -323,7 +338,7 @@
                     </p> -->
             </div>
         </div>
-        <p>Last Updated: April 15, 2016</p>
+        <p class="text-center">Last Updated: August 23, 2016</p>
     </section>
 
     <!-- jQuery -->
